# custos

./: .air.toml  .env.example  .gitignore  .golangci.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  sqlc.yaml
.agents/workflows/workflow-contract/: repo.config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
api/: openapi.yaml
cmd/server/: main.go
dashboard/: .cta.json  AGENTS.md  package-lock.json  package.json
dashboard/src/: main.tsx  routeTree.gen.ts  styles.css
dashboard/src/components/: Badge.tsx  SparkArea.tsx
dashboard/src/lib/: api.ts  types.ts  utils.ts
dashboard/src/routes/: __root.tsx  analytics.tsx  health.tsx  (+3 more)
docker/: Dockerfile.dashboard  Dockerfile.server  nginx.conf
docs/: README.md
docs/implementation/: project.md
internal/api/: router.go
internal/config/: config.go
internal/domain/: analysis.go  errors.go  event.go  filter.go  issue.go  notification.go  project.go
internal/provider/: registry.go
internal/queue/: queue.go
internal/service/: analysis.go  ingestion.go  notification.go
internal/store/: store.go
migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql  000002_seed_system_user.up.sql  000003_filter_rules.up.sql
pkg/event/: payload.go
sdks/nodejs/: README.md  package-lock.json  package.json
sdks/python/: README.md  pyproject.toml
sdks/python/custos/: __init__.py  _handler.py  _payload.py  _queue.py  _redactor.py
sdks/python/tests/: test_handler.py  test_queue.py  test_redactor.py
(+58 files in other folders)
