[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "custos-sdk"
version = "0.1.0"
description = "Python SDK for Custos — AI-powered log intelligence"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["logging", "error-tracking", "observability", "custos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
]
dependencies = []  # zero runtime dependencies — stdlib only

[project.urls]
Homepage = "https://github.com/iPFSoftwares/custos"
Issues = "https://github.com/iPFSoftwares/custos/issues"

[tool.hatch.build.targets.wheel]
packages = ["custos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
